--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=api
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://200.3.193.22:3306/DATABASE
-spring.datasource.username=USER
-spring.datasource.password=PASS
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.username=user
+spring.datasource.password=password
 spring.datasource.tomcat.max-active=10
