--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+	bblanchon/ArduinoJson@^7.2.0
+	adafruit/Adafruit MPU6050@^2.2.6
