--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -14,8 +14,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	bblanchon/ArduinoJson@^7.2.0
 	adafruit/Adafruit MPU6050@^2.2.6
 	adafruit/Adafruit Unified Sensor@^1.1.9
-  	bblanchon/ArduinoJson@^6.19.4
-  	knolleary/PubSubClient@^2.8
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Arduino_JSON@^0.2.0
