--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -17,4 +17,4 @@ lib_deps =
 	adafruit/Adafruit MPU6050@^2.2.6
 	adafruit/Adafruit Unified Sensor@^1.1.9
 	knolleary/PubSubClient@^2.8
-	arduino-libraries/Arduino_JSON@^0.2.0
+	bblanchon/ArduinoJson@^7.2.0
