fix: read env vars

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,3 +1,15 @@
-FROM nginx:1.27-alpine
+FROM oven/bun AS build
 
-COPY app/ /usr/share/nginx/html
+ENV PROD=1
+
+COPY app/ /app
+
+COPY main.js .
+
+RUN bun main.js
+
+FROM nginx:1.27-alpine AS prod
+
+COPY --from=build /app /usr/share/nginx/html
+
+EXPOSE 80
