fix: prod db config

--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -1,4 +1,4 @@
-name: rj45
+name: star
 
 services:
 
@@ -8,10 +8,13 @@ services:
     restart: always
     ports:
       - 5432:5432
+    secrets:
+      - db_user
+      - db_password
     environment:
-      POSTGRES_DB: db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: prod
+      POSTGRES_USER: db_user
+      POSTGRES_PASSWORD: db_password
     volumes:
       - db:/var/lib/postgresql/data
     networks:
@@ -19,14 +22,19 @@ services:
 
   api:
     container_name: api
-    image: 'ghcr.io/arkantrust/rj45-api:latest'
-    restart: restart
+    image: 'ghcr.io/arkantrust/star-api'
+    restart: always
     ports:
       - '8080:8080' # host:container
+    secrets:
+      - db_user
+      - db_password
+      - jwt_secret
     environment:
-      - DB_URL=postgresql://db/db
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
+      - DB_URL=postgresql://db/prod
+      - DB_USER=/run/secrets/db_user
+      - DB_PASSWORD=/run/secrets/db_password
+      - JWT_SECRET=/run/secrets/jwt_secret
     depends_on:
       - db
     networks:
@@ -35,14 +43,16 @@ services:
 
   analytics:
     container_name: analytics
-    image: 'ghcr.io/arkantrust/rj45-analytics:latest'
-    restart: restart
+    image: 'ghcr.io/arkantrust/star-analytics'
+    restart: always
     ports:
       - '8000:8000' # host:container
+    secrets:
+      - jwt_secret
     environment:
       - API_URL=http://api:8080
+      - JWT_SECRET=/run/secrets/jwt_secret
     depends_on:
-      - db
       - api
     networks:
       - backend
@@ -50,11 +60,11 @@ services:
 
   web:
     container_name: web
-    image: 'ghcr.io/arkantrust/rj45-web:latest'
-    restart: restart
+    image: 'ghcr.io/arkantrust/star-web'
+    restart: always
     ports:
-      - "80:80"
-      - "443:443"
+      - '80:80'
+      - '443:443'
     environment:
       - API_URL=http://api:8080
       - ANALYTICS_URL=http://analytics:8000
@@ -64,6 +74,14 @@ services:
       - analytics
     networks:
       - frontend
+
+secrets:
+  db_user:
+    environment: "DB_USER"
+  db_password:
+    environment: "DB_PASSWORD"
+  jwt_secret:
+    environment: "JWT_SECRET"
 
 volumes:
   db:
