--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -3,7 +3,7 @@ name: rj45
 services:
 
   db:
-    container_name: rj45-db
+    container_name: db
     image: 'postgres:16'
     restart: always
     ports:
@@ -18,15 +18,13 @@ services:
       - backend
 
   api:
-    container_name: rj45-api
-    restart: unless-stopped
-    build:
-      context: api
-      dockerfile: Dockerfile
+    container_name: api
+    image: 'ghcr.io/arkantrust/rj45-api:latest'
+    restart: restart
     ports:
       - '8080:8080' # host:container
     environment:
-      - DB_URL=postgresql://rj45-db/db
+      - DB_URL=postgresql://db/db
       - DB_USER=postgres
       - DB_PASSWORD=postgres
     depends_on:
@@ -36,15 +34,13 @@ services:
       - frontend
 
   analytics:
-    container_name: rj45-analytics
-    restart: unless-stopped
-    build:
-      context: analytics
-      dockerfile: Dockerfile
+    container_name: analytics
+    image: 'ghcr.io/arkantrust/rj45-analytics:latest'
+    restart: restart
     ports:
       - '8000:8000' # host:container
     environment:
-      - API_URL=http://rj45-api:8080
+      - API_URL=http://api:8080
     depends_on:
       - db
       - api
@@ -53,17 +49,15 @@ services:
       - frontend
 
   web:
-    container_name: rj45-web
-    restart: unless-stopped
-    build:
-      context: web
-      dockerfile: Dockerfile
+    container_name: web
+    image: 'ghcr.io/arkantrust/rj45-web:latest'
+    restart: restart
     ports:
       - "80:80"
       - "443:443"
     environment:
-      - API_URL=http://rj45-api:8080
-      - ANALYTICS_URL=http://rj45-analytics:8000
+      - API_URL=http://api:8080
+      - ANALYTICS_URL=http://analytics:8000
       - NGINX_PORT=80
     depends_on:
       - api
