--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,28 +1,39 @@
-# .github/workflows/docker-publish.yaml
-name: Docker Publish
+name: Publish to GHCR
 
 on:
   workflow_call:
     inputs:
+      image:
+        required: true
+        type: string
       project:
         required: true
         type: string
-      tag:
-        required: true
-        type: string
+
+env:
+  REGISTRY: ghcr.io
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
     steps:
 
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          sparse-checkout: ${{ inputs.project }}
-          sparse-checkout-cone-mode: false
+        # with:
+        #   sparse-checkout: ${{ inputs.project }}
+        #   sparse-checkout-cone-mode: false
     
       - run: cd ${{ inputs.project }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -30,15 +41,32 @@ jobs:
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ inputs.image }}
+          tags: |
+            type=sha,format=long
+            type=raw,value=latest
+
       - name: Build and push Docker image
+        id: push
         uses: docker/build-push-action@v4
         with:
           context: ./${{ inputs.project }}
-          file: ./${{ inputs.project }}/Dockerfile
-          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ inputs.tag }}
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ inputs.image }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
