--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -1,15 +1,26 @@
 server:
-  port: 8080
   error:
     include-message: always
     include-binding-errors: always
 
 spring:
+  devtools:
+    livereload:
+      enabled: true
+    add-properties: true
+  profiles:
+    default: dev
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:${DB_URL}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 5
   jpa:
     hibernate:
       ddl-auto: update
+
+springdoc:
+  api-docs:
+    path: /docs.json
+  swagger-ui:
+    path: /docs
