feat: jwt auth api

--- a/api/src/main/resources/.env.example
+++ b/api/src/main/resources/.env.example
@@ -1,3 +1,4 @@
 DB_URL=postgresql://localhost:5432/db
 DB_USER=postgres
 DB_PASSWORD=postgres
+JWT_SECRET=secret # Generate one with: `openssl rand -base64 256` or from `https://jwtsecret.com/generate`
