--- a/api/src/main/resources/application-prod.yaml
+++ b/api/src/main/resources/application-prod.yaml
@@ -1,3 +1,11 @@
+application:
+  security:
+    jwt:
+      secret-key: ${JWT_SECRET_KEY}
+      expiration: ${JWT_EXPIRATION:300000} # 5 minutes
+      refresh-token:
+        expiration: ${JWT_REFRESH_EXPIRATION:604800000} # 7 days
+
 spring:
   devtools:
     livereload:
